Added top text and charger in css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="top-container">
+        <div class="top-left-container">
+        <h4 class="maker">CASIO</h6>
+        <p class="model">HS-4G</p>
+        </div>
+        <div class="charger-container">
+        </div>
+      </div>
+    </div>
+  </body>
   <script src="./script.js"></script>
 </html>
