--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <title>Document</title>
   </head>
   <body>
@@ -17,6 +18,43 @@
         <div class="charger-container">
         </div>
       </div>
+      <div class="display-container">
+          <div class="display">
+              <p class="text">123456789</p>
+          </div>
+     </div>
+     <div class="btn-container">
+         <div class="btn-row">
+             <button class="btn AC" >AC</button>
+             <button class="btn C">C</button>
+             <button class="btn">%</button>
+             <button class="btn">√</button>
+         </div>
+         <div class="btn-row">
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn">÷</button>
+        </div>
+        <div class="btn-row">
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">X</button>
+        </div>
+        <div class="btn-row">
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">-</button>
+        </div>
+        <div class="btn-row">
+            <button class="btn">0</button>
+            <button class="btn">.</button>
+            <button class="btn">=</button>
+            <button class="btn">+</button>
+        </div>
+     </div>
     </div>
   </body>
   <script src="./script.js"></script>
