--- a/index.html
+++ b/index.html
@@ -20,39 +20,39 @@
       </div>
       <div class="display-container">
           <div class="display">
-              <p class="text">123456789</p>
+              <p class="text" id="text">123456789</p>
           </div>
      </div>
      <div class="btn-container">
          <div class="btn-row">
-             <button class="btn AC" >AC</button>
-             <button class="btn C">C</button>
-             <button class="btn">%</button>
-             <button class="btn">√</button>
+             <button class="btn" id="ac-btn" >AC</button>
+             <button class="btn" id="c-btn">C</button>
+             <button class="btn" id="percent-btn">%</button>
+             <button class="btn" id="root-btn">√</button>
          </div>
          <div class="btn-row">
-            <button class="btn">7</button>
-            <button class="btn">8</button>
-            <button class="btn">9</button>
-            <button class="btn">÷</button>
+            <button class="btn" id="btn-7">7</button>
+            <button class="btn" id="btn-8">8</button>
+            <button class="btn" id="btn-9">9</button>
+            <button class="btn" id="divide-btn">÷</button>
         </div>
         <div class="btn-row">
-            <button class="btn">4</button>
-            <button class="btn">5</button>
-            <button class="btn">6</button>
-            <button class="btn">X</button>
+            <button class="btn" id="btn-4">4</button>
+            <button class="btn" id="btn-5">5</button>
+            <button class="btn" id="btn-6">6</button>
+            <button class="btn" id="multiply-btn">X</button> 
         </div>
         <div class="btn-row">
-            <button class="btn">1</button>
-            <button class="btn">2</button>
-            <button class="btn">3</button>
-            <button class="btn">-</button>
+            <button class="btn" id="btn-1">1</button>
+            <button class="btn" id="btn-2">2</button>
+            <button class="btn" id="btn-3">3</button>
+            <button class="btn" id="substract-btn">-</button>
         </div>
         <div class="btn-row">
-            <button class="btn">0</button>
-            <button class="btn">.</button>
-            <button class="btn">=</button>
-            <button class="btn">+</button>
+            <button class="btn" id="btn-0">0</button>
+            <button class="btn" id="dot-btn">.</button>
+            <button class="btn" id="equals-btn">=</button>
+            <button class="btn" id="add-btn">+</button>
         </div>
      </div>
     </div>
