--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="display-container">
           <div class="display">
-              <p class="text" id="text">123456789</p>
+              <p class="text" id="text"></p>
           </div>
      </div>
      <div class="btn-container">
@@ -40,7 +40,7 @@
             <button class="btn" id="btn-4">4</button>
             <button class="btn" id="btn-5">5</button>
             <button class="btn" id="btn-6">6</button>
-            <button class="btn" id="multiply-btn">X</button> 
+            <button class="btn" id="multiply-btn">x</button> 
         </div>
         <div class="btn-row">
             <button class="btn" id="btn-1">1</button>
