Added basic functions for +-*/

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button class="btn" id="btn-1">1</button>
             <button class="btn" id="btn-2">2</button>
             <button class="btn" id="btn-3">3</button>
-            <button class="btn" id="substract-btn">-</button>
+            <button class="btn" id="subtract-btn">-</button>
         </div>
         <div class="btn-row">
             <button class="btn" id="btn-0">0</button>
