--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="display-container">
           <div class="display">
-              <p class="text" id="text"></p>
+              <p class="text" id="text">0</p>
           </div>
      </div>
      <div class="btn-container">
