Added btns css and script for memory btns

--- a/index.html
+++ b/index.html
@@ -20,10 +20,20 @@
       </div>
       <div class="display-container">
           <div class="display">
+              <div class="memory-container">
+                <p class="memory" id="memory"></p>
+              </div>
               <p class="text" id="text"></p>
           </div>
      </div>
      <div class="btn-container">
+          <div class="btn-row">
+             <button class="btn-top" id="mc-btn">MC</button>
+             <button class="btn-top" id="mr-btn">MR</button>
+             <button class="btn-top" id="m--btn">M-</button>
+             <button class="btn-top" id="m+-btn">M+</button>
+             <button class="btn-top" id="pluss/minus">+/-</button>
+         </div>
          <div class="btn-row">
              <button class="btn" id="ac-btn" >AC</button>
              <button class="btn" id="c-btn">C</button>
