--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
              <button class="btn-top" id="mr-btn">MR</button>
              <button class="btn-top" id="m--btn">M-</button>
              <button class="btn-top" id="m+-btn">M+</button>
-             <button class="btn-top" id="pluss/minus">+/-</button>
+             <button class="btn-top" id="plus/minus-btn">+/-</button>
          </div>
          <div class="btn-row">
              <button class="btn" id="ac-btn" >AC</button>
