added calculator- to all classes and id`s

--- a/index.html
+++ b/index.html
@@ -9,63 +9,64 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="top-container">
-        <div class="top-left-container">
-        <h4 class="maker">CASIO</h6>
-        <p class="model">HS-4G</p>
+    <div class="calculator-container">
+      <div class="calculator-top-container">
+        <div class="calculator-top-left-container">
+        <h4 class="calculator-maker">CASIO</h6>
+        <p class="calculator-model">HS-4G</p>
         </div>
-        <div class="charger-container">
+        <div class="calculator-charger-container">
         </div>
       </div>
-      <div class="display-container">
-          <div class="display">
-              <div class="memory-container">
-                <p class="memory" id="memory"></p>
+      <div class="calculator-display-container">
+          <div class="calculator-display">
+              <div class="calculator-memory-container">
+                <p class="calculator-memory" id="calculator-memory"></p>
               </div>
-              <p class="text" id="text"></p>
+              <p class="calculator-text" id="calculator-text"></p>
           </div>
      </div>
-     <div class="btn-container">
-          <div class="btn-row">
-             <button class="btn-top" id="mc-btn">MC</button>
-             <button class="btn-top" id="mr-btn">MR</button>
-             <button class="btn-top" id="m--btn">M-</button>
-             <button class="btn-top" id="m+-btn">M+</button>
-             <button class="btn-top" id="plus/minus-btn">+/-</button>
+     <div class="calculator-btn-container">
+          <div class="calculator-btn-row">
+             <button class="calculator-btn-top" id="calculator-mc-btn">MC</button>
+             <button class="calculator-btn-top" id="calculator-mr-btn">MR</button>
+             <button class="calculator-btn-top" id="calculator-m--btn">M-</button>
+             <button class="calculator-btn-top" id="calculator-m+-btn">M+</button>
+             <button class="calculator-btn-top" id="calculator-plus/minus-btn">+/-</button>
          </div>
-         <div class="btn-row">
-             <button class="btn" id="ac-btn" >AC</button>
-             <button class="btn" id="c-btn">C</button>
-             <button class="btn" id="percent-btn">%</button>
-             <button class="btn" id="root-btn">√</button>
+         <div class="calculator-btn-row">
+             <button class="calculator-btn" id="calculator-ac-btn" >AC</button>
+             <button class="calculator-btn" id="calculator-c-btn">C</button>
+             <button class="calculator-btn" id="calculator-percent-btn">%</button>
+             <button class="calculator-btn" id="calculator-root-btn">√</button>
          </div>
-         <div class="btn-row">
-            <button class="btn" id="btn-7">7</button>
-            <button class="btn" id="btn-8">8</button>
-            <button class="btn" id="btn-9">9</button>
-            <button class="btn" id="divide-btn">÷</button>
+         <div class="calculator-btn-row">
+            <button class="calculator-btn" id="calculator-btn-7">7</button>
+            <button class="calculator-btn" id="calculator-btn-8">8</button>
+            <button class="calculator-btn" id="calculator-btn-9">9</button>
+            <button class="calculator-btn" id="calculator-divide-btn">÷</button>
         </div>
-        <div class="btn-row">
-            <button class="btn" id="btn-4">4</button>
-            <button class="btn" id="btn-5">5</button>
-            <button class="btn" id="btn-6">6</button>
-            <button class="btn" id="multiply-btn">x</button> 
+        <div class="calculator-btn-row">
+            <button class="calculator-btn" id="calculator-btn-4">4</button>
+            <button class="calculator-btn" id="calculator-btn-5">5</button>
+            <button class="calculator-btn" id="calculator-btn-6">6</button>
+            <button class="calculator-btn" id="calculator-multiply-btn">x</button> 
         </div>
-        <div class="btn-row">
-            <button class="btn" id="btn-1">1</button>
-            <button class="btn" id="btn-2">2</button>
-            <button class="btn" id="btn-3">3</button>
-            <button class="btn" id="subtract-btn">-</button>
+        <div class="calculator-btn-row">
+            <button class="calculator-btn" id="calculator-btn-1">1</button>
+            <button class="calculator-btn" id="calculator-btn-2">2</button>
+            <button class="calculator-btn" id="calculator-btn-3">3</button>
+            <button class="calculator-btn" id="calculator-subtract-btn">-</button>
         </div>
-        <div class="btn-row">
-            <button class="btn" id="btn-0">0</button>
-            <button class="btn" id="dot-btn">.</button>
-            <button class="btn" id="equals-btn">=</button>
-            <button class="btn" id="add-btn">+</button>
+        <div class="calculator-btn-row">
+            <button class="calculator-btn" id="calculator-btn-0">0</button>
+            <button class="calculator-btn" id="calculator-dot-btn">.</button>
+            <button class="calculator-btn" id="calculator-equals-btn">=</button>
+            <button class="calculator-btn" id="calculator-add-btn">+</button>
         </div>
      </div>
     </div>
+    
   </body>
   <script src="./script.js"></script>
 </html>
